--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <h1>Hello World ! </h1>
     <p>paragraph</p>
     <h2>Salom dasturchi</h2>
+    <h3> Git hub da ishlash kerak</h3>
+    <h3> Git hub da ishlash kerak</h3>
+    <h3> Git hub da ishlash kerak</h3>
+    <h3> Git hub da ishlash kerak</h3>
+    <h3> Git hub da ishlash kerak</h3>
 </body>
 </html>
